--- a/backend/.env
+++ b/backend/.env
@@ -48,3 +48,31 @@ GST_RATE_DEFAULT=18.0
 TDS_THRESHOLD_PROFESSIONAL_FEES=30000.0
 TDS_THRESHOLD_RENT=240000.0
 CASH_PAYMENT_LIMIT=10000.0
+
+
+
+GOOGLE_API_KEY=AIzaSyClppt8j7WmnTreF8SftbmdXtZYVNcmGdM                   # For Gemini models
+
+# Agent Configuration
+AGENT_ID=eagle_ai_agent_001
+AGENT_NAME=Eagle Eye AI
+AGENT_DOMAIN=Finance, Taxation & Regulatory Compliance
+AGENT_SPECIALIZATION=Expert Chartered Accountant & Strategic Financial Advisor
+AGENT_DESCRIPTION=A dual-role AI engine that assists CAs with technical compliance audits, report generation, and natural language transaction search on client data, while simultaneously acting as a financial advisor for clients by analyzing their uploaded documents to provide key ratios, health summaries, and investment strategies based on RBI guidelines and government schemes.
+AGENT_CAPABILITIES=financial_report_generation,document_summarization,natural_language_transaction_search,compliance_audit_gst_tds,financial_ratio_analysis,investment_advisory_rbi_gov_schemes,regulatory_knowledge_base
+# Server Configuration
+PORT=7000
+PUBLIC_URL=http://localhost:7000
+
+# Mumbai Hacks Registry
+REGISTRY_URL=https://mumbaihacksindex.chat39.com
+
+# LLM Provider (anthropic, openai, or gemini)
+LLM_PROVIDER=gemini
+
+# Tunnel Configuration (for public deployment)
+ENABLE_TUNNEL=true
+NGROK_AUTH_TOKEN=367X0QQznHQwbOIlZ4yRJB35Eo7_6oyAoKyCkL9UoYH3dyb2P  # Get from https://dashboard.ngrok.com
+
+# Optional: MCP Tools (LLM provider agnostic)
+# SMITHERY_API_KEY=your-smithery-api-key
