--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,7 @@ Pillow==10.1.0
 # AI/ML
 # openai==1.3.5  # TODO: Uncomment when adding OpenAI integration
 # anthropic==0.7.0  # TODO: Uncomment when adding Claude integration
+google-genai
 
 # Vector database
 pgvector==0.2.3  # TODO: Uncomment if using pgvector directly
